# backend-falldetection

./: .gitignore  database.py  main.py  model_handler.py  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json  verify_backend.py
.github/workflows/: main_backendapi-04.yml  main_backendapi1.yml
api/: index.py  model_handler.py
